ggspectra 0.2.5 (2018-07-14)
============================

Revise to track changes in 'photobiology' version 0.9.21.
* Revise plot() methods to support objects with multiple spectra in long form.
* Revise plot() methods to NOT display by default calculated summaries in
annotations when a plot contains multiple spectra.
* Revise plot() methods to retrieve and validate the name of the factor used
to identify multiple spectra, using as default the value stored in the attribute
"idfactor" implemented in 'photobiology' 0.9.21.
* Add autoplot() as an alias of plot() for spectra and collections of spectra.
* Tested compatible with 'ggplot2' 3.0.0.

ggspectra 0.2.4 (2018-05-05)
============================

Revise to track changes in 'photobiology' 0.9.20 to avoid spurious messages.
* Add ggplot() method specialization for collections of spectra.
* Add plot() method specializations for collections of spectra.

ggspectra 0.2.3 (2017-12-18)
============================

Track changes in package 'photobiology' 0.9.18.
* Add plot.calibration_spct()
* Add ggplot.calibration_spct()

Improve handling of plot titles.
* Add utility function ggtitle_spct()
* Update all plot() methods to allow flexible contents in automatic titles including setting of the time zone and format used for displaying time.

ggspectra 0.2.2
===============

Track changes in package 'photobiology' 0.9.16 and 0.9.17. This among other
improvements makes it easy to plot spectral absorptance.
Expand y scale to expected range in all cases, but do not force these limits in
any case when data exceeds them, except for absorbance for which the y scale is
not expanded past 6 a.u.
Add new annotation "boundaries" to highlight with horizontal line(s) the
expected range of the plotted quantity, highlighting the limit(s) exceeded if
data fall outside the expected/range.
Add previously missing ggplot() method for class object_spct.
Revise vignettes.

ggspectra 0.2.1
===============
