@@ -1,8 +1,8 @@
 Package: ggspectra
 Type: Package
 Title: Extensions to 'ggplot2' for Radiation Spectra
-Version: 0.2.4.9002
-Date: 2018-07-14
+Version: 0.2.5
+Date: 2018-09-21
 Authors@R:
    c(
     person("Pedro J.", "Aphalo", email = "pedro.aphalo@helsinki.fi", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-3385-972X")),
@@ -20,21 +20,22 @@ LazyData: TRUE
 LazyLoad: TRUE
 ByteCompile: TRUE
 Depends:
-    R (>= 3.3.0)
+    R (>= 3.4.0)
 Imports:
-    photobiology (>= 0.9.21),
+    photobiology (>= 0.9.24),
     photobiologyWavebands (>= 0.4.2),
-    scales (>= 0.4.1),
-    ggplot2 (>= 2.2.1),
-    ggrepel (>= 0.7.0),
-    dplyr (>= 0.7.4),
+    scales (>= 1.0.0),
+    ggplot2 (>= 3.0.0),
+    ggrepel (>= 0.8.0),
+    dplyr (>= 0.7.6),
     lubridate (>= 1.7.4),
-    tidyr (>= 0.8.0)
+    tidyr (>= 0.8.1)
 Suggests:
     knitr (>= 1.20),
-    rmarkdown (>= 1.9)
+    rmarkdown (>= 1.10)
 URL: https://www.r4photobiology.info,
     https://bitbucket.org/aphalo/ggspectra
 BugReports: https://bitbucket.org/aphalo/ggspectra
+Encoding: UTF-8
 RoxygenNote: 6.1.0
 VignetteBuilder: knitr
