@@ -40,6 +40,8 @@ export(SI_tagged)
 export(SI_tg_format)
 export(StatColor)
 export(StatColorGuide)
+export(StatFindQty)
+export(StatFindWls)
 export(StatLabelPeaks)
 export(StatLabelValleys)
 export(StatPeaks)
@@ -92,6 +94,8 @@ export(scale_y_s.q.response_continuous)
 export(sec_axis_w_frequency)
 export(sec_axis_w_number)
 export(stat_color)
+export(stat_find_qty)
+export(stat_find_wls)
 export(stat_label_peaks)
 export(stat_label_valleys)
 export(stat_peaks)
