@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/geom-spct.R, R/stat-color.R,
+% Please edit documentation in R/geom-spct.R, R/stat-color.R, R/stat-find-wls.R,
 %   R/stat-label-peaks.R, R/stat-peaks.R, R/stat-wb-box.R, R/stat-wb-column.R,
 %   R/stat-wb-contribution.R, R/stat-wb-hbar.R, R/stat-wb-irrad.R,
 %   R/stat-wb-label.R, R/stat-wb-mean.R, R/stat-wb-relative.R,
@@ -10,6 +10,8 @@
 \alias{GeomSpct}
 \alias{StatColor}
 \alias{Stats}
+\alias{StatFindWls}
+\alias{StatFindQty}
 \alias{StatLabelPeaks}
 \alias{StatLabelValleys}
 \alias{StatPeaks}
@@ -41,8 +43,26 @@ object is responsible for rendering the data in the plot.
 All \code{stat_*} functions (like \code{stat_bin}) return a layer that
 contains a \code{Stat*} object (like \code{StatBin}). The \code{Stat*}
 object is responsible for rendering the data in the plot.
+
+All \code{stat_*} functions (like \code{stat_bin}) return a layer that
+contains a \code{Stat*} object (like \code{StatBin}). The \code{Stat*}
+object is responsible for rendering the data in the plot.
+
+All \code{stat_*} functions (like \code{stat_bin}) return a layer that
+contains a \code{Stat*} object (like \code{StatBin}). The \code{Stat*}
+object is responsible for rendering the data in the plot.
 }
 \details{
+Each of the \code{Stat*} objects is a \code{\link[ggplot2]{ggproto}} object, descended
+from the top-level \code{Stat}, and each implements various methods and
+fields. To create a new type of Stat object, you typically will want to
+implement one or more of the following:
+
+Each of the \code{Stat*} objects is a \code{\link[ggplot2]{ggproto}} object, descended
+from the top-level \code{Stat}, and each implements various methods and
+fields. To create a new type of Stat object, you typically will want to
+implement one or more of the following:
+
 Each of the \code{Stat*} objects is a \code{\link[ggplot2]{ggproto}} object,
 descended from the top-level \code{Stat}, and each implements various methods
 and fields. To create a new type of Stat object, you typically will want to
@@ -54,6 +74,10 @@ fields. To create a new type of Stat object, you typically will want to
 implement one or more of the following:
 }
 \seealso{
+\code{\link[ggplot2]{ggplot2-ggproto}}
+
+\code{\link[ggplot2]{ggplot2-ggproto}}
+
 \code{\link[ggplot2]{ggplot2-ggproto}}
 
 \code{\link[ggplot2]{ggplot2-ggproto}}
