@@ -104,7 +104,7 @@ library(ggrepel)
 
 ```{r, include=FALSE, echo=FALSE}
 library(knitr)
-opts_chunk$set(fig.path = 'figure1/', fig.align = 'center', 
+opts_chunk$set(fig.align = 'center', 
                fig.show = 'hold', fig.width = 7, fig.height = 4,
                cache = FALSE)
 options(warnPartialMatchArgs = FALSE)
