@@ -29,7 +29,7 @@ library(ggspectra)
 
 ```{r, include=FALSE, echo=FALSE}
 library(knitr)
-opts_chunk$set(fig.path = 'figure2/', fig.align = 'center', fig.show = 'hold',
+opts_chunk$set(fig.align = 'center', fig.show = 'hold',
                fig.width = 7, fig.height = 4, cache = FALSE)
 options(warnPartialMatchArgs = FALSE)
 ```
