@@ -1,13 +1,15 @@
 ggspectra 0.2.5 (2018-07-14)
 ============================
 
-Revise to track changes in 'photobiology' version 0.9.21.
+Revise to track changes in 'photobiology' version 0.9.24.
+* Add stat_find_wls() and stat_find_qty(), two new statistics useful for
+highlighting features in spectra.
 * Revise plot() methods to support objects with multiple spectra in long form.
 * Revise plot() methods to NOT display by default calculated summaries in
 annotations when a plot contains multiple spectra.
 * Revise plot() methods to retrieve and validate the name of the factor used
 to identify multiple spectra, using as default the value stored in the attribute
-"idfactor" implemented in 'photobiology' 0.9.21.
+"idfactor" implemented in 'photobiology' 0.9.21 and later.
 * Add autoplot() as an alias of plot() for spectra and collections of spectra.
 * Tested compatible with 'ggplot2' 3.0.0.
 
